syntax = "proto3";

package easyrent.command;

service Command {
  rpc OnRefresh(RefreshRequest) returns (RefreshReply) {}
  rpc OnLogout(LogoutRequest) returns (LogoutReply) {}
}

message PassedRentPost {
  string name = 1;
  string phone = 2;
  string room_addr = 3;
  int32 room_area = 4;
  string room_type = 5;
  string room_orientation = 6;
  int32 room_floor = 7;
  string description = 8;
  int32 price = 9;
  string restriction = 10;
  string release_time = 11;
}

message PassedHelpPost {
  string name = 1;
  string phone = 2;
  string expected_addr = 3;
  int32 expected_price = 4;
  string demands = 5;
  string release_time = 8;
}

message RefreshRequest {}

message RefreshReply {
  repeated PassedRentPost rent_post = 1;
  repeated PassedHelpPost help_post = 2;
}

message LogoutRequest {
  string name = 1;
}
message LogoutReply {}
